Use Collectors.toList() in StateContextTest for Java 11 compatibility
The test was backported from 4.1 (compiled at release 17) and used
Stream.toList(), a Java 16+ API. 4.0 compiles at source 11, so the
release build's JDK 11 javac failed at testCompile.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>